syntax = "proto3";

package user;

// The user service definition
service UserService {
  // Get all users
  rpc GetAllUsers (Empty) returns (UsersResponse) {}
  
  // Get a user by ID
  rpc GetUserById (UserIdRequest) returns (UserResponse) {}
  
  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  
  // Update a user
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  
  // Delete a user
  rpc DeleteUser (UserIdRequest) returns (Empty) {}
}

// Empty message for requests that don't need parameters
message Empty {}

// Request message for user ID
message UserIdRequest {
  int32 id = 1;
}

// Request message for creating a user
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

// Request message for updating a user
message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

// Response message containing a single user
message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

// Response message containing multiple users
message UsersResponse {
  repeated UserResponse users = 1;
} 